feat: inclusão de botão que apaga os contatos salvos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         </tbody>
                     </thead>
                 </table>
+            <button class="btn-reset" type="reset">APAGAR TUDO</button>
             </div>
         </main>
     </div>
